# Immortal

./: .gitignore  .goreleaser.yaml  .mailmap  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PERFORMANCE.md  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.omc/: project-memory.json
.playwright-mcp/: page-2026-04-18T14-28-37-484Z.yml  page-2026-04-18T14-28-50-205Z.yml  page-2026-04-18T14-30-44-008Z.yml  page-2026-04-18T14-31-03-028Z.yml  page-2026-04-18T14-33-12-075Z.yml  page-2026-04-18T14-33-27-716Z.yml  page-2026-04-18T14-34-37-419Z.yml  page-2026-04-18T14-34-52-973Z.yml  page-2026-04-18T18-25-06-080Z.yml  page-2026-04-18T18-25-19-622Z.yml  page-2026-04-18T18-26-14-550Z.yml  page-2026-04-18T18-26-19-143Z.yml  page-2026-04-18T18-26-32-734Z.yml  page-2026-04-18T18-27-47-591Z.yml  page-2026-04-18T18-28-09-224Z.yml  page-2026-04-18T18-29-38-854Z.yml  page-2026-04-18T18-29-56-503Z.yml  page-2026-04-18T18-30-15-474Z.yml  page-2026-04-18T18-30-28-454Z.yml  page-2026-04-18T18-30-49-237Z.yml  page-2026-04-18T18-31-01-774Z.yml  page-2026-04-18T18-31-19-538Z.yml  page-2026-04-18T18-31-32-029Z.yml  page-2026-04-18T18-55-29-522Z.yml  page-2026-04-18T18-55-56-093Z.yml  page-2026-04-18T18-56-18-263Z.yml  page-2026-04-18T18-56-46-364Z.yml  page-2026-04-18T19-19-34-538Z.yml  page-2026-04-18T19-20-02-415Z.yml  page-2026-04-18T19-20-30-189Z.yml  (+6 more)
assets/: README.md
sdk/python/: pyproject.toml
sdk/python/immortal/: __init__.py  engine.py  event.py
sdk/python/tests/: test_engine.py
(+480 files in other folders)
