[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "immortal-engine"
version = "0.1.0"
description = "Immortal Engine SDK — your apps never die"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
